--- a/templates/base.html
+++ b/templates/base.html
@@ -26,15 +26,13 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'about' %}">About</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
+
 
             </ul>
           </div>
         </div>
       </nav>
-
+      <hr width="100%;" >
 
 <div class ="container">
 
