--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,16 @@
 h1 { 
     color: orangered;
 }
+
+hr{
+
+
+        margin-top: 0.5em;
+        margin-bottom: 0.5em;
+        margin-left: auto;
+        margin-right: auto;
+        border-style:outset;
+        border-width: 3px;
+        color: red; 
+
+}
