--- a/templates/base.html
+++ b/templates/base.html
@@ -7,12 +7,12 @@
     <title>{% block title %} {% endblock title%}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link  href="{% static 'css/base.css' %}" rel="stylesheet">
+    <link  href="{% static 'css/baseVer.css' %}" rel="stylesheet">
 </head>
 <body>
 
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Navbar</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,7 +24,7 @@
                 <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'about' %}">About</a>
+                <a class="nav-link active" href="{% url 'about' %}">About</a>
               </li>
 
 
@@ -34,10 +34,11 @@
       </nav>
       <hr width="100%;" >
 
-<div class ="container">
+<div class ="container ">
 
     {% block content %}
     {% endblock content %}
+
 </div>
 
 
